data/derived/fa15/progs/unify/prog2693.ml.out
Characters 102-104:
  if t1+t2 > 9 then (1,[(t1+t2)-10])
     ^^
Error: This expression has type 'a list
       but an expression was expected of type int
